force-app/main/default/objects/Activity/fields/Deviation_Status__c.field-meta.xml
<CustomField>
    <fullName>Deviation_Status__c</fullName>
    <label>Deviation Status</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Waiting for Approval</fullName>
            </value>
            <value>
                <fullName>Approved</fullName>
            </value>
            <value>
                <fullName>Rejected</fullName>
            </value>
            <value>
                <fullName>Needed additional information</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>