force-app/main/default/objects/Activity/fields/Deviation_Type__c.field-meta.xml
<CustomField>
    <fullName>Deviation_Type__c</fullName>
    <label>Deviation Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>KYC Documents</fullName>
            </value>
            <value>
                <fullName>Market Reputation</fullName>
            </value>
            <value>
                <fullName>Legal Proceeding</fullName>
            </value>
            <value>
                <fullName>ROI Deviation</fullName>
            </value>
            <value>
                <fullName>Negative Zone</fullName>
            </value>
            <value>
                <fullName>Clean Dealer</fullName>
            </value>
            <value>
                <fullName>Less ROI Score</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>