force-app/main/default/objects/Activity/fields/HMC_Comments__c.field-meta.xml
<CustomField>
    <fullName>HMC_Comments__c</fullName>
    <label>Comments</label>
    <type>TextArea</type>
</CustomField>