force-app/main/default/objects/Activity/fields/Name__c.field-meta.xml
<CustomField>
    <fullName>Name__c</fullName>
    <label>Deviation Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>